--- a/ls-ASA-Logins-ecs.conf
+++ b/ls-ASA-Logins-ecs.conf
@@ -48,15 +48,15 @@ output {
 
             ##DEBUG
             file {
-                path => "/tmp/asa.log"
+                path => "[mypath]ASAlogins"
                 codec => "rubydebug"
             }
 
             elasticsearch {
-                hosts => "https://89c0e11ca5d5424cba7711a83d671b05.us-east4.gcp.elastic-cloud.com:9243"
-                user => "beats"
-                password => "beatsforme"
-                index => "ecs-custom"
+                hosts => "[elastic url]"
+                user => "[username]"
+                password => "[password]"
+                index => "[myindex]"
             }
         }
    }
