--- a/meraki-url-logs.conf
+++ b/meraki-url-logs.conf
@@ -91,7 +91,7 @@ filter {
         add_field => { "[event][dataset]" => "meraki.url" }
         add_field => { "[event][kind]" => "event" }
         add_field => { "[event][outcome]" => "success" }
-        add_field => { "[event][type]" => "protocol"}
+        add_field => { "[event][type]" => "connection"}
 
         rename =>    { "message" => "[event][original]" }
 
@@ -102,7 +102,7 @@ filter {
         ## update => { "@timestamp" =>"%{millis}%{nanos}" }
 
         ######################################################
-        ###             Populate Observer fields           ###
+        ###         Populate included Observer fields      ###
         ######################################################
         add_field => { "[observer][vendor]" => "Meraki" }
         rename =>    { "[host]" => "[observer][ip]"  }
