--- a/meraki-device-poll.conf
+++ b/meraki-device-poll.conf
@@ -15,7 +15,6 @@ input {
 
   ## http Poller to Meraki API
   http_poller {
-    type => "meraki.devices"
     urls => {
       meraki => {
         method => get
@@ -71,7 +70,7 @@ filter {
       add_field => { "[event][type]" => "info"}
 
       #Remove Extra Fields
-      remove_field =>  [ "wan1Ip", "wan2Ip", "address", "notes", "[http_poller_metadata]", "url", "configurationUpdatedAt", "[firmware]", "type", "tags" ] 
+      remove_field =>  [ "wan1Ip", "wan2Ip", "address", "notes", "[http_poller_metadata]", "url", "configurationUpdatedAt", "[firmware]" ] 
   }
 
   ######################################################
