--- a/meraki-url-logs.conf
+++ b/meraki-url-logs.conf
@@ -121,6 +121,13 @@ filter {
         lowercase => [ "[http][request][method]" ]
 
         ######################################################
+        ###       Fix observer names - . & - issues.       ###
+        ######################################################
+        mutate {
+            gsub => [ "[observer][name]", "_", "." ]
+        }
+        
+        ######################################################
         ###             Remove Temp fields, etc.           ###
         ######################################################
         remove_field => [ "millis", "nanos", "ip" , "port", "@version", "type", "[urls][sld]", "[urls][subdomain]", "[urls]" ]
@@ -131,7 +138,6 @@ filter {
 
 
 output {
-      ## Meraki URL Logging
         elasticsearch {
             hosts => "${ES_Host}"
             user => "${ES_INGEST}"
@@ -139,9 +145,9 @@ output {
             index => "ecs-meraki-url"
           
             ######################################################
-            ###  Added URL pipeline for ECS user agent parsing ###
+            ### URL pipeline for ECS user agent geo ip parsing ###
             ######################################################
-            pipeline => "url"
+            pipeline => "meraki-url"
           }
         }
     }
