--- a/meraki-url-logs.conf
+++ b/meraki-url-logs.conf
@@ -145,9 +145,9 @@ output {
             index => "ecs-meraki-url"
           
             ######################################################
-            ### URL pipeline for ECS user agent geo ip parsing ###
+            ###   pipeline for user agent, geoip, as parsing   ###
             ######################################################
-            pipeline => "meraki-url"
+            pipeline => "meraki"
           }
         }
     }
