--- a/meraki-flow-logs.conf
+++ b/meraki-flow-logs.conf
@@ -82,11 +82,15 @@ filter {
 }
 
 output {
-    elasticsearch {
-        hosts => "${ES_URL}"
-        user => "${ES_INGEST}"
-        password => "${ES_INGEST_PW}"
-        index => "ecs-meraki-flows"
-        pipeline => "meraki-flow-log"
-    }
+        elasticsearch {
+            hosts => "${ES_Host}"
+            user => "${ES_INGEST}"
+            password => "${ES_INGEST_PW}"
+            index => "ecs-meraki-url"
+          
+            ######################################################
+            ###   pipeline for user agent, geoip, as parsing   ###
+            ######################################################
+            pipeline => "meraki"
+      }
 }
