--- a/meraki-flow-logs.conf
+++ b/meraki-flow-logs.conf
@@ -86,7 +86,7 @@ output {
             hosts => "${ES_Host}"
             user => "${ES_INGEST}"
             password => "${ES_INGEST_PW}"
-            index => "ecs-meraki-url"
+            index => "ecs-meraki-flow-logs"
           
             ######################################################
             ###   pipeline for user agent, geoip, as parsing   ###
