--- a/ecs-meraki-input-pipeline.conf
+++ b/ecs-meraki-input-pipeline.conf
@@ -94,5 +94,5 @@ output {
     } 
     
     ## try this too
-    ##  pipeline { send_to => "${type}" }
+    ##  pipeline { send_to => "%{type}" }
 }
