--- a/ecs-meraki-input-pipeline.conf
+++ b/ecs-meraki-input-pipeline.conf
@@ -19,8 +19,8 @@ input {
         ## IPv4 port w/o hard coding, have yet to figure out why, so often hard 
         ## code IP the pipeline should listen on
         
-        host => [logstash ip address]
-        port  => 9514
+        host => [ logstash ip address ]
+        port => [ logstash port ] 
         type => "meraki"
     }
 }
@@ -43,7 +43,7 @@ filter {
       add_field => { "[observer][vendor]" => "meraki" }
       add_field => { "[event][original]" => "message" }
       add_field => { "[ecs][version]" => "1.5.0" }
-    
+    }
 
     ######################################################
     ###           Identifty Meraki Log Types           ###
@@ -66,6 +66,7 @@ filter {
     if "ip_flow" in [message] or "pattern:" in [message] {
         mutate { update => { "type" => "meraki.flow" } }               
     }
+    
     ## TO DO:
     ##
     ## MX Gateway:
@@ -92,7 +93,4 @@ output {
     if [type] == "meraki.flow"  {
         pipeline { send_to => "meraki.auth" }
     } 
-    
-    ## try this too
-    ##  pipeline { send_to => "%{type}" }
 }
