--- a/meraki-auth.conf
+++ b/meraki-auth.conf
@@ -107,7 +107,7 @@ filter {
 
 output {
         elasticsearch {
-            hosts => "${ES_Host}"
+            hosts => "${ES_HOST}"
             user => "${ES_INGEST}"
             password => "${ES_INGEST_PW}"
             index => "ecs-meraki-auth-logs"
