--- a/Meraki/logstash pipelines/Syslog/p-meraki-content-block.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-content-block.conf
@@ -1,6 +1,6 @@
 ######################################################################################
 #                                                                                  
-#  Meraki URL Logstash Pipeline                                                  
+#  Meraki Content Block Logstash Pipeline                                                  
 #                                                                                  
 #  Last Revised:    03/30/2019 
 #  Transport:       logstash pipeline                                   
@@ -10,7 +10,7 @@
 
 input { 
     pipeline { 
-        address => "meraki.url" 
+        address => "meraki-content" 
     } 
 }
 
@@ -20,19 +20,9 @@ filter {
     ###                Grok Meraki URLs                ###
     ######################################################
     grok {    
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[event][module]} src=%{IP:[source][ip]}:%{NUMBER:[source][port]} dst=%{IP:[destination][ip]}:%{NUMBER:[destination][port]} mac=%{MAC:[source][mac]} ?(?:agent=%{QS:[useragent]})? request: %{WORD:[http][request][method]} %{URI:[url][original]}"}
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[event][module]} content_filtering_block url='%{URI:[url][original]}' category0='%{GREEDYDATA:[rule][name]}' server='%{IP:[destination][ip]}:%{NUMBER:[destination][port]}' ?(?:client_mac='%{MAC:[source][mac]}')?"}
     }
-    
-    ######################################################
-    ###          Remove Meraki TLS URL wildcard        ###
-    ######################################################
-    
-    if [url][original] == "/..." {
-        mutate { 
-            gsub => [ "[url][original]", "\.{3}", "" ]
-        }
-    }
-    
+
     ######################################################
     ###        Split URL into correct components       ###
     ######################################################
@@ -41,8 +31,6 @@ filter {
             match => { "[url][original]" => "%{URIPROTO:[url][scheme]}://(?:%{USER:[url][username]}(?::[^@]*)?@)?(?:%{URIHOST:[url-domain]})?(?:%{URIPATHPARAM:[url][path]})?" }
         }
     }
-
-
 
     ######################################################
     ###                 Domain Parsing                 ###
@@ -58,6 +46,7 @@ filter {
       }
     }
 
+
     ######################################################
     ###         Fix for Nanosecond timestamps          ###
     ######################################################
@@ -65,6 +54,11 @@ filter {
             fields => "nanos"
             length_bytes => 3
     }
+    date {
+        match => [ "%{millis}%{nanos}", "UNIX_MS"]
+        target => "@timestamp"
+    }
+
 
     mutate {
         ######################################################
@@ -73,18 +67,15 @@ filter {
         add_field => { "[event][kind]" => "event" }
         add_field => { "[event][category]" => "web"}
         add_field => { "[event][type]" => "connection"}
-        add_field => { "[event][action]" => "web_connection"}
+        add_field => { "[event][action]" => "web_connection_blocked"}
         add_field => { "[event][outcome]" => "success"}
+        add_field => { "[event][dataset]" => "meraki.urls" }
 
-        ######################################################
-        ###          Use event time for @timestamp         ###
-        ######################################################
-        add_field => { "[event][created]" => "%{@timestamp}" }
-        #update => { "@timestamp" =>"%{millis}%{nanos}" }
 
         ######################################################
         ###             Populate Observer fields           ###
         ######################################################
+        add_field => { "[observer][vendor]" => "meraki" }
         rename =>    { "[host]" => "[observer][ip]"  }
         gsub => [ "[observer][name]", "\_", "." ]
 
@@ -100,14 +91,18 @@ filter {
         #remove temp fields, etc.
         remove_field => [ "millis", "nanos", "ip" , "port", "@version", "type", "[urls][sld]", "[urls][subdomain]", "[urls]" ]
     }
+
 }
 
 output {
-        elasticsearch {
-            hosts => "${ES_HOST}"
-            user => "${ES_INGEST}"
-            password => "${ES_INGEST_PW}"
-            index => "ecs-meraki-url"
-            pipeline => "meraki"
-      }
+    
+    ## Meraki URL Logging
+    elasticsearch {
+        hosts => "${ES_HOST}"
+        user => "${ES_INGEST}"
+        password => "${ES_INGEST_PW}"
+        index => "ecs-meraki-content"
+        pipeline => "meraki"
+    }
 }
+
