--- a/Meraki/logstash pipelines/Syslog/p-meraki-eap.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-eap.conf
@@ -1,38 +1,22 @@
 ######################################################################################
 #                                                                                  
-#  Meraki 802.1x Auth Logs Confgiguration  (AP & Switch Events)                                                
+#  Meraki Authentication Logstash Pipeline                                                  
 #                                                                                  
-#  Last Revised:   04/11/2019 
-#  Transport:      udp 9516                                  
-#  Compatibility:  ecs 1.5.0 dev                                    
-#  Notes:   gsub fix for meraki .s in names
-#           updated to arrays for nested fields, added domain fixes  
+#  Last Revised:    03/30/2019 
+#  Transport:       logstash pipeline                                   
+#  Compatibility:   ecs 1.5.0 dev                                    
+#  Notes:           
 ######################################################################################
 
-## discrete port for easy identification
-input {
-      udp {
-      
-        ## I've run into *nix configs that default to ipv6 and won't open an
-        ## IPv4 port w/o hard coding, have yet to figure out why, so often hard 
-        ## code IP the pipeline should listen on
-        
-        host => [logstash ip address]
-        
-        ## Update port for your environment, easiest way is to split Meraki
-        ## Logs - URLs, events, etc to different ports. Configs coming
-        ## soon for a single Meraki syslog target & multiple pipelines
-        
-        port  => 9516
-    }
+input { 
+    pipeline { 
+        address => "meraki-auth"
+    } 
 }
 
 filter {
-    ######################################################
-    ###              Hash Original Message             ###
-    ######################################################
-    fingerprint {
-        target => "[event][hash]"
+    mutate {
+        rename =>    { "host" => "[host][ip]" }
     }
 
     ######################################################
@@ -40,7 +24,7 @@ filter {
     ######################################################
 
     grok {    
-        match => { "message" => "<%{NUMBER:[syslog][facility]}>1 %{INT:millis}.%{INT:nanos} %{WORD:[host][name]} events type=%{NOTSPACE:eap_outcome} radio='%{NUMBER:[wireless][radio][id]}' vap='%{NUMBER:[wireless][ssid][id]}' client_mac='%{MAC:[source][mac]}' client_ip='%{IP:[source][ip]}' identity='%{EMAILADDRESS:[user][name]}' aid='%{NUMBER:[wireless][association][id]}'" }
+        match => { "message" => "%{INT:millis}.%{INT:nanos} %{WORD:[host][name]} events type=%{NOTSPACE:eap_outcome} radio='%{NUMBER:[wireless][radio][id]}' vap='%{NUMBER:[wireless][ssid][id]}' client_mac='%{MAC:[source][mac]}' client_ip='%{IP:[source][ip]}' identity='%{EMAILADDRESS:[user][name]}' aid='%{NUMBER:[wireless][association][id]}'" }
     }
         
     ######################################################
@@ -66,6 +50,10 @@ filter {
             fields => "nanos"
             length_bytes => 3
     }
+    date {
+        match => [ "%{millis}%{nanos}", "UNIX_MS"]
+        target => "@timestamp"
+    }
 
     mutate {
 
@@ -75,14 +63,14 @@ filter {
         add_field => { "[event][kind]" => "event" }
         add_field => { "[event][category]" => "authentication"}
 
+        ##add_field => { "[event][type]" => ""}
         ##add_field => { "[event][action]" => "user_authentication"}
+        ##add_field => { "[event][outcome]" => ""}
 
-        add_field => { "[ecs][version]" => "1.5" }
 
         ######################################################
         ###             Populate host fields           ###
         ######################################################
-        rename =>    { "[host]" => "[host][ip]"  }
         add_field => { "[host][type]" => "AP" }
         add_field => { "[host][os][name]" => "Meraki" }
         add_field => { "[host][os][platform]" => "Wireless" }
@@ -91,25 +79,21 @@ filter {
         ## Fix Meraki _ reporting
         gsub => [ "[host][name]", "\_", "." ]
 
-        rename =>    { "message" => "[event][original]" }
-
-        ######################################################
-        ###          Use event time for @timestamp         ###
-        ######################################################
-        add_field => { "[event][created]" => "%{@timestamp}" }
-        #update => { "@timestamp" =>"%{millis}%{nanos}" }
     
         ##Clean Up
         remove_field => [ "millis", "nanos", "type" ]
+
+
     }
 }
 
 
 output {
-        elasticsearch {
-            hosts => "${ES_HOST}"
-            user => "${ES_INGEST}"
-            password => "${ES_INGEST_PW}"
-            index => "ecs-meraki-auth-logs"
-      }
+    elasticsearch {
+        hosts => "${ES_HOST}"
+        user => "${ES_INGEST}"
+        password => "${ES_INGEST_PW}"
+        index => "ecs-meraki-eap"
+        pipeline => "meraki"
+    }
 }
