--- a/Meraki/logstash pipelines/Syslog/p-meraki-input.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-input.conf
@@ -1,11 +1,12 @@
 ######################################################################################
 #                                                                                  
-#  Syslog Pipeline Input                                                  
+#  Meraki Pipeline Input                                                  
 #                                                                                  
 #  Last Revised:    03/30/2019 
 #  Transport:       syslog 5000                                  
 #  Compatibility:   ecs 1.5.0 dev                                    
 #  Notes:           pipeline input for full meraki syslogs      
+#                    - can't remember why I went with udp over syslog
 #  Todos:           1) fix nano event timestamps and replace @timestamp
 #                   2) verify flow id - ip_flow is good for mx, pattern for AP?
 #                   3) enrichment for API poller?
@@ -19,8 +20,8 @@ input {
         ## IPv4 port w/o hard coding, have yet to figure out why, so often hard 
         ## code IP the pipeline should listen on
         
-        host => [ logstash ip address ]
-        port => [ logstash port ] 
+        host => "${LS_IP}"
+        port => ${LS_MERAKI_PORT}
         type => "meraki"
     }
 }
@@ -32,15 +33,16 @@ filter {
     ######################################################
     
     ## Hash original event for nonrepudiation
+    ######################################################
     fingerprint {
         target => "[event][hash]"
     }
     
-    ## Make any general Meraki mutations
+    ## Make any global Meraki mutations
     ######################################################
     mutate {
       add_field => { "[event][created]" => "%{@timestamp}" }
-      add_field => { "[event][original]" => "message" }
+      add_field => { "[event][original]" => "%{message}" }
       add_field => { "[ecs][version]" => "1.5.0" }
     }
 
@@ -56,13 +58,13 @@ filter {
 
     ## EAP Authentication 802.1x (verify auth vs authz??)
     ######################################################
-    if "8021x_eap" in [message] {
+    else if "8021x_eap" in [message] {
         mutate { update => { "type" => "meraki.auth" } }               
     }
 
     ## Flow Logs (basically FW accept/deny)
     ######################################################
-    if "ip_flow" in [message] or "pattern:" in [message] {
+    else if "ip_flow" in [message] or "pattern:" in [message] {
         mutate { update => { "type" => "meraki.flow" } }               
     }
     
@@ -84,12 +86,19 @@ filter {
 
 output {
     if [type] == "meraki.url"  {
-        pipeline { send_to => "meraki.url"  }
+        pipeline { send_to => "meraki-url"  }
     } 
-    if [type] == "meraki.auth"  {
-        pipeline { send_to => "meraki.auth" }
+
+    else if [type] == "meraki.auth"  {
+        pipeline { send_to => "meraki-auth" }
     } 
-    if [type] == "meraki.flow"  {
-        pipeline { send_to => "meraki.auth" }
+
+    else if [type] == "meraki.flow"  {
+        pipeline { send_to => "meraki-flow" }
     } 
+
+    else if [type] == "meraki" {
+        pipeline { send_to => "meraki" }
+    }
+
 }
