--- a/Meraki/logstash pipelines/API_Pollers/p-merakiApi-orgs.conf
+++ b/Meraki/logstash pipelines/API_Pollers/p-merakiApi-orgs.conf
@@ -148,21 +148,10 @@ filter {
 output {
 
     elasticsearch {
-        hosts => "https://89c0e11ca5d5424cba7711a83d671b05.us-east4.gcp.elastic-cloud.com:9243"
-        user => "beats"
-        password => "beatsforme"
-        index => "ecs-meraki-inventory-test"
+    elasticsearch {
+        hosts => "${ES_HOST}"
+        user => "${ES_INGEST}"
+        password => "${ES_INGEST_PW}"
+        index => "ecs-meraki-inventory"
     }
-
-
-    file {
-        path => "/tmp/meraki_%{[device][serial]}.json"
-        codec => "json"
-    }
-
-       file {
-       path => "/tmp/meraki_%{[device][serial]}.txt"
-        codec => "rubydebug"
-    }
-
 }
