--- a/Meraki/logstash pipelines/Syslog/p-meraki-input.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-input.conf
@@ -100,5 +100,9 @@ output {
     else if [type] == "meraki" {
         pipeline { send_to => "meraki" }
     }
+    
+    else if [type] == "meraki.content" {
+        pipeline { send_to => "meraki-content" }
+    } 
 
 }
