Update Meraki Logstash poller
fixed lanIp issue on MX devices
cleaned up temp field names
removed dupes (e.g. multiple org ids)
moved all info to [meraki]... and copied enrichment data to the doc root

still need [meraki] templates

--- a/Meraki/logstash pipelines/API_Pollers/p-merakiApi-orgs.conf
+++ b/Meraki/logstash pipelines/API_Pollers/p-merakiApi-orgs.conf
@@ -5,21 +5,15 @@
 #  Last Revised:    03/05/2020
 #  Transport:       HTTP Poller                                   
 #  Compatibility:   ecs 1.5.0                                    
-#  Notes:           Initial config to pull device information from Meraki API for 
+#  Notes:           Logstash pipeline to pull device information from Meraki API for 
 #                   Enrichment Data
 #                   MXs must have VLANs enabled for Subnet, DHCP, and lanIp
 #                  
 #                   GeoParsing is manual, based on address field in Meraki device:
 #                     name;city_name;region_name;country_iso_code;region_iso_code;continent_name
 #                     I'd recommend using internal "site codes" for names
-#
-#  To Dos:          1) Ignore the rest of the address field, and populate e.g. [meraki][address]
-#                   2) add PR for ECS wireless fields
-#                   3) populate and use device info for asset index / enrichment
-#                   4) Deal with device.firmware = Not running configured version (offline)
-#                   5) Separate poller for security alerts (AMP + syslog dont seem to mix)
-#                   6) Rename fields (drop top level for enrichments or you'll have to rename)
-#                   7) Pipeline to handle split of MX (vlan + ssids?)
+#  To Do:           good schedule- run on new device? (webhook from Meraki)
+#                   automate enrichment index build
 #
 #    !! WARNING !!   !! WARNING !!   !! WARNING !!   !! WARNING !!   !! WARNING !!  
 #        If you enable VLANs on MX/W devices SSIDs will need to be reenabled!!!
@@ -51,15 +45,11 @@ input {
     
 }
 
-
-
 filter {
 
     ## NOTE: iirc API keys are org specific, but if not uncomment
     ## the following split to allow for multiple organizations
-
     ## split { field => "organization" }
-
 
     ##################################################################################
     ### Get Meraki Network ids per organiaztion 
@@ -108,16 +98,32 @@ filter {
             target_headers => "temp_vlan"
         }
         split { field => "vlan" }
-
+        
+        ## Fix LanIp for MX Series
+        mutate {
+            update => { "[device][lanIp]" => "%{[vlan][applianceIp]}" }
+        }
     }
     
-    mutate {
-        ## remove temp http poller metadata
-        remove_field => [ "temp_org", "temp_network", "temp_device", "temp_vlan" ]
-        
 
+    ## Split up Firmware Information, skip offline devices
+
+    if "Not" in [device][firmware] {
+        mutate { remove_field => [ "[device][firmware]" ] }
     }
- 
+    else {
+        mutate {
+            add_field => { "firmware" => "%{[device][firmware]}" }
+    
+            split => { "firmware" => "-" }
+            add_field => { "[os][family]" => "%{[firmware][0]}" }
+            add_field => { "[os][version]" =>  "%{[firmware][1]}.%{[firmware][2]}" }    
+            add_field => { "[os][full]" => "%{[firmware][0]} %{[firmware][1]}.%{[firmware][2]}" }
+            rename => [ "[device][firmware]", "[meraki][device][firmware]" ]
+        }
+    }
+
+
     ## Internal address / geo Parsing based on Meraki Dashboard
     ######################################################################################
     ## name;city_name;region_name;country_iso_code;region_iso_code;continent_name
@@ -126,15 +132,40 @@ filter {
         match => { "[device][address]" => "%{DATA:[geo][name]};%{DATA:[geo][city_name]};%{DATA:[geo][region_name]};%{WORD:[geo][country_iso_code]}-%{WORD:[geo][region_iso_code]};%{GREEDYDATA:[geo][continent_name]}" }
     }
 
+    mutate {
+
+        ## update region ISO code
+        update => { "[geo][region_iso_code]" => "%{[geo][country_iso_code]}-%{[geo][region_iso_code]}" }
+
+        remove_field => [ "[temp_org]", "[temp_network]", "[temp_device]", "[temp_vlan]" ]
+
+        rename => [ "[organization]", "[meraki][organization]" ]
+        rename => [ "[network]", "[meraki][network]" ]
+        rename => [ "[device]", "[meraki][device]" ]
+
+        add_field => { "[meraki][vlan][id]" => "%{[vlan][id]}" }
+        add_field => { "[meraki][vlan][name]" => "%{[vlan][name]}" }
+        add_field => { "[meraki][vlan][network_id]" => "%{[vlan][networkId]}" }
+        add_field => { "[meraki][vlan][subnet]" => "%{[vlan][subnet]}" }
+
+        remove_field => [ "[meraki][organization][@version]", "[meraki][organization][@timestamp]", "[meraki][organization][samlConsumerUrl]", "[meraki][organization][samlConsumerUrls]" ]
+        remove_field => [ "[meraki][network][disableMyMerakiCom]", "[meraki][network][disableRemoteStatusPage]" ]
+        remove_field => [ "[vlan]", "[meraki][device][networkId]", "[meraki][network][organizationId]" ]
+
+        ## Add root level enrichment Fields for direct insertion
+        add_field => { "name" => "%{[meraki][device][name]}" }
+        add_field => { "mac" => "%{[meraki][device][mac]}" }
+        add_field => { "product" => "%{[meraki][device][model]}" }
+        add_field => { "serial_number" => "%{[meraki][device][serial]}" }
+
+    }
 }
 
 output {
-
     elasticsearch {
         hosts => "${ES_HOST}"
         user => "${ES_INGEST}"
         password => "${ES_INGEST_PW}"
-        index => "ecs-meraki-inventory-test"
+        index => "ecs-asset-meraki""
     }
-  
 }
